--- a/Informacion.html
+++ b/Informacion.html
@@ -367,67 +367,162 @@
 
     @media (max-width: 768px) {
       .pantalla-inicial {
-        padding-top: 300px;
+        padding-top: 200px;
+        min-height: 100vh;
       }
 
       .divisiones {
+        width: 92%;
         padding: 2rem;
-        margin: 1rem;
+        margin: 1rem auto;
       }
 
       .divisiones h1 {
-        font-size: 2.8em;
+        font-size: 2.5em !important;
+        line-height: 1.3;
       }
 
       .divisiones h1:last-child {
-        font-size: 2.4em;
+        font-size: 2em !important;
       }
 
-      #contador {
-        font-size: 1.2em;
-        padding: 0.8rem 1.2rem;
+      .info-section {
+        padding: 1.5rem;
+        margin: 1rem auto;
       }
 
-      .botones {
-        flex-direction: column;
-        align-items: stretch;
-        padding: 0 1rem;
+      .info-section h2 {
+        font-size: 1.6rem;
       }
 
-      .botones a {
-        text-align: center;
+      .countdown-elegant {
+        padding: 1rem;
+        margin: 1rem 0;
+      }
+
+      .countdown-container {
+        gap: 0.8rem;
+      }
+
+      .countdown-item {
+        min-width: 70px;
+        padding: 0.8rem;
+      }
+
+      .countdown-number {
+        font-size: 1.5rem;
       }
 
       .custom-audio-controls {
         padding: 0.8rem;
+        gap: 0.5rem;
       }
 
       .custom-audio-controls button {
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
+        font-size: 1rem;
       }
 
-      .pantalla-inicial .divisiones {
-        max-width: 90%;
+      .timeline::before {
+        left: 20px;
+      }
+
+      .timeline-item {
+        width: 100%;
+        padding-left: 50px;
+      }
+
+      .timeline-item:nth-child(even) {
+        left: 0;
+      }
+
+      .timeline-content {
+        padding: 1rem;
+      }
+
+      .timeline-content::before {
+        left: -35px !important;
+      }
+
+      .dress-code-item {
+        padding: 1.5rem;
+        margin: 1rem 0;
+      }
+
+      .dress-code-item h3 {
+        font-size: 1.5rem;
+      }
+
+      .mesa-regalos {
+        padding: 1.5rem;
+        margin: 1rem auto;
+      }
+
+      .regalo-item {
+        padding: 0.8rem 1.5rem;
+        margin: 0.5rem;
+        width: 90%;
+      }
+
+      .location-buttons {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .location-button {
+        width: 100%;
+        padding: 1rem;
+        justify-content: center;
+      }
+
+      .half-screen img {
+        object-position: center 30%;
+      }
+
+      .floating-music {
+        width: 50px;
+        height: 50px;
+        bottom: 15px;
+        right: 15px;
+      }
+
+      #autoPlayButton {
+        font-size: 0.9rem;
+        padding: 0.8rem 1.5rem;
+        top: 10px;
+        left: 10px;
+      }
+
+      .pantalla-rosgold .divisiones {
+        width: 92%;
         padding: 2rem;
       }
-      
-      .pantalla-inicial .divisiones h1 {
-        font-size: 2.8em;
+
+      .pantalla-rosgold .divisiones h1 {
+        font-size: 1.8em !important;
       }
 
-      .pantalla-inicial .divisiones h1:last-child {
-        font-size: 2.4em;
+      .pantalla-rosgold img[alt="diseño"] {
+        width: 100px;
+      }
+    }
+
+    @media (max-width: 360px) {
+      .divisiones h1 {
+        font-size: 2em !important;
       }
 
-      .pantalla-inicial #contador {
-        width: 90%;
-        font-size: 1.3em;
+      .divisiones h1:last-child {
+        font-size: 1.7em !important;
       }
 
-      .half-screen:not(.pantalla-inicial) .divisiones {
-        margin-top: 4rem;
-        margin-bottom: 4rem;
+      .custom-audio-controls {
+        flex-direction: column;
+      }
+
+      #progressBar {
+        width: 100%;
       }
     }
 
