--- a/Informacion.html
+++ b/Informacion.html
@@ -366,15 +366,82 @@
     }
 
     @media (max-width: 768px) {
-      .pantalla-inicial {
-        padding-top: 200px;
-        min-height: 100vh;
+      .divisiones {
+        width: 85%;
+        max-width: none;
+        padding: 1.5rem;
+        margin: 1rem auto;
+        border-radius: 20px;
       }
 
-      .divisiones {
-        width: 92%;
-        padding: 2rem;
-        margin: 1rem auto;
+      .info-section {
+        width: 100%;
+        padding: 1.2rem;
+        margin: 1rem 0;
+      }
+
+      .pantalla-inicial .divisiones {
+        width: 85%;
+        padding: 1.5rem;
+      }
+
+      .pantalla-rosgold .divisiones {
+        width: 85%;
+        padding: 1.5rem;
+      }
+
+      .half-screen > .divisiones {
+        width: 85%;
+        padding: 1.5rem;
+      }
+
+      .mesa-regalos {
+        width: 100%;
+        padding: 1.2rem;
+      }
+
+      .regalo-item {
+        width: 100%;
+        margin: 0.5rem 0;
+      }
+
+      .dress-code {
+        width: 100%;
+        padding: 0;
+      }
+
+      .dress-code-item {
+        width: 100%;
+        margin: 0.5rem 0;
+        padding: 1.2rem;
+      }
+
+      .location-buttons {
+        width: 100%;
+        padding: 0;
+      }
+
+      .location-button {
+        width: 100%;
+        margin: 0.5rem 0;
+      }
+
+      .countdown-elegant {
+        width: 100%;
+        padding: 1rem;
+      }
+
+      .custom-audio-controls {
+        width: 100%;
+        max-width: none;
+      }
+
+      #progressBar {
+        width: 100%;
+      }
+
+      .half-screen {
+        padding: 1rem;
       }
 
       .divisiones h1 {
@@ -384,11 +451,6 @@
 
       .divisiones h1:last-child {
         font-size: 2em !important;
-      }
-
-      .info-section {
-        padding: 1.5rem;
-        margin: 1rem auto;
       }
 
       .info-section h2 {
@@ -509,6 +571,15 @@
     }
 
     @media (max-width: 360px) {
+      .divisiones {
+        width: 92%;
+        padding: 1rem;
+      }
+
+      .info-section {
+        padding: 1rem;
+      }
+
       .divisiones h1 {
         font-size: 2em !important;
       }
