--- a/Informacion.html
+++ b/Informacion.html
@@ -1193,6 +1193,132 @@
         max-width: 260px;
       }
     }
+
+    /* Estilos mejorados para todos los botones */
+    .location-buttons,
+    .botones,
+    .custom-audio-controls {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1.2rem;
+      margin: 2rem auto;
+      width: 100%;
+      max-width: 400px;
+    }
+
+    .location-button,
+    .botones a,
+    .custom-audio-controls button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    .custom-audio-controls {
+      flex-wrap: nowrap;
+      padding: 1rem;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 20px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+    }
+
+    #progressBar {
+      flex: 1;
+      min-width: 100px;
+      max-width: 200px;
+      margin: 0 0.5rem;
+    }
+
+    /* Ajustes para botones flotantes */
+    #autoPlayButton,
+    .floating-music {
+      position: fixed;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #autoPlayButton {
+      top: 20px;
+    }
+
+    .floating-music {
+      bottom: 20px;
+    }
+
+    /* Ajustes responsive */
+    @media (max-width: 768px) {
+      .location-buttons,
+      .botones {
+        flex-direction: column;
+        gap: 1rem;
+        width: 90%;
+        max-width: 300px;
+      }
+
+      .location-button,
+      .botones a {
+        width: 100%;
+        max-width: 250px;
+      }
+
+      .custom-audio-controls {
+        gap: 0.8rem;
+        padding: 0.8rem;
+        max-width: 300px;
+      }
+
+      #progressBar {
+        max-width: 150px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .location-buttons,
+      .botones {
+        width: 95%;
+        max-width: 250px;
+      }
+
+      .location-button,
+      .botones a {
+        max-width: 220px;
+        padding: 0.8rem 1.5rem;
+      }
+
+      .custom-audio-controls {
+        max-width: 250px;
+        padding: 0.7rem;
+      }
+
+      #progressBar {
+        max-width: 120px;
+      }
+
+      #autoPlayButton,
+      .floating-music {
+        transform: translateX(-50%) scale(0.9);
+      }
+    }
+
+    /* Ajuste para los botones de regalo */
+    .regalo-item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 1rem auto;
+      max-width: 300px;
+    }
+
+    .regalo-item i {
+      margin-right: 1rem;
+    }
   </style>
 </head>
 <body>
