--- a/Informacion.html
+++ b/Informacion.html
@@ -33,13 +33,10 @@
       width: 100vw;
       min-height: 100vh;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      opacity: 1;
-      transform: translateY(0);
-      transition: all 1s cubic-bezier(0.4, 0, 0.2, 1);
+      padding: 2rem 0;
     }
 
     /* Ajuste específico para la primera pantalla */
@@ -56,6 +53,28 @@
     .section-visible {
       opacity: 1;
       transform: translateY(0);
+    }
+
+    .divisiones {
+      position: relative;
+      z-index: 2;
+      padding: 3rem;
+      max-width: 420px;
+      width: 90%;
+      border-radius: 30px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.92);
+      backdrop-filter: blur(12px);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      animation: fadeIn 1.5s ease both;
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      margin: 2rem auto;
+    }
+
+    .divisiones:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
 
     .half-screen img {
@@ -75,27 +94,6 @@
       opacity: 0.7;
       filter: brightness(0.9) contrast(1.15) blur(0);
       transform: scale(1.02);
-    }
-
-    .divisiones {
-      position: relative;
-      z-index: 2;
-      padding: 3rem;
-      max-width: 420px;
-      width: 90%;
-      border-radius: 30px;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.92);
-      backdrop-filter: blur(12px);
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      animation: fadeIn 1.5s ease both;
-      border: 1px solid rgba(255, 255, 255, 0.5);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .divisiones:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
     }
 
     .pantalla-inicial .divisiones {
@@ -174,6 +172,16 @@
       animation: pulse 3s infinite ease-in-out;
       font-weight: 600;
       letter-spacing: 0.5px;
+    }
+
+    .audio-container {
+      width: 100%;
+      max-width: 350px;
+      margin: 2rem auto;
+      padding: 1.5rem;
+      background: linear-gradient(135deg, var(--rosa-intenso), var(--violeta));
+      border-radius: 20px;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     }
 
     .custom-audio-controls {
@@ -366,40 +374,20 @@
     }
 
     @media (max-width: 768px) {
-      /* Ajustes generales de contenedores */
+      .half-screen {
+        padding: 1rem 0;
+      }
+
       .divisiones {
         width: 88%;
         max-width: 400px;
-        padding: 1.8rem;
-        margin: 1rem auto;
-        border-radius: 15px;
+        padding: 2rem;
+        margin: 1.5rem auto;
       }
 
-      /* Ajuste específico para cada tipo de div */
-      .pantalla-inicial .divisiones {
-        width: 88%;
-        max-width: 400px;
-        padding: 1.8rem;
-        margin-top: 2rem;
-      }
-
-      .pantalla-rosgold .divisiones {
-        width: 88%;
-        max-width: 400px;
-        padding: 1.8rem;
-      }
-
-      .half-screen > .divisiones {
-        width: 88%;
-        max-width: 400px;
-        padding: 1.8rem;
-      }
-
-      /* Contenedor principal */
-      .half-screen {
-        padding: 0.5rem;
-        display: flex;
-        align-items: center;
+      .celebracion .divisiones,
+      .regalos .divisiones {
+        margin: 2rem auto;
       }
 
       .info-section {
@@ -454,115 +442,119 @@
       }
 
       .divisiones h1 {
-        font-size: 2.5em !important;
+        font-size: 2.2em !important;
         line-height: 1.3;
+        margin-bottom: 1rem;
       }
 
-      .divisiones h1:last-child {
-        font-size: 2em !important;
+      .divisiones h2 {
+        font-size: 1.8em;
+        margin-bottom: 1.5rem;
       }
 
-      .info-section h2 {
-        font-size: 1.6rem;
+      p {
+        font-size: 0.95rem;
+        line-height: 1.6;
+        margin: 0.8rem 0;
       }
 
       .countdown-elegant {
-        padding: 1rem;
-        margin: 1rem 0;
-      }
-
-      .countdown-container {
-        gap: 0.8rem;
+        padding: 1.2rem;
+        margin: 1.5rem auto;
+        width: 95%;
       }
 
       .countdown-item {
-        min-width: 70px;
         padding: 0.8rem;
+        min-width: 65px;
       }
 
       .countdown-number {
         font-size: 1.5rem;
       }
 
-      .custom-audio-controls {
-        padding: 0.8rem;
-        gap: 0.5rem;
+      .mesa-regalos {
+        padding: 1.2rem;
       }
 
-      .custom-audio-controls button {
-        width: 35px;
-        height: 35px;
-        font-size: 1rem;
+      .regalo-item {
+        padding: 0.8rem 1.2rem;
+        font-size: 0.9rem;
+        gap: 0.8rem;
+      }
+
+      .regalo-item i {
+        font-size: 1.2rem;
       }
 
       .timeline::before {
-        left: 20px;
+        left: 30px;
       }
 
       .timeline-item {
-        width: 100%;
-        padding-left: 50px;
-      }
-
-      .timeline-item:nth-child(even) {
-        left: 0;
+        padding-left: 60px;
+        padding-right: 15px;
       }
 
       .timeline-content {
         padding: 1rem;
       }
 
-      .timeline-content::before {
-        left: -35px !important;
+      .timeline-content h3 {
+        font-size: 1.3rem;
       }
 
       .dress-code-item {
         padding: 1.5rem;
-        margin: 1rem 0;
+        margin: 0.8rem 0;
       }
 
       .dress-code-item h3 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+        margin-bottom: 0.8rem;
       }
 
-      .mesa-regalos {
-        padding: 1.5rem;
-        margin: 1rem auto;
-      }
-
-      .regalo-item {
-        padding: 0.8rem 1.5rem;
-        margin: 0.5rem;
-        width: 90%;
-      }
-
-      .location-buttons {
-        flex-direction: column;
-        gap: 1rem;
+      .color-circle {
+        width: 30px;
+        height: 30px;
       }
 
       .location-button {
-        width: 100%;
-        padding: 1rem;
-        justify-content: center;
+        padding: 0.8rem 1.5rem;
+        font-size: 0.95rem;
+        gap: 0.6rem;
       }
 
-      .half-screen img {
-        object-position: center 30%;
+      .location-button i {
+        font-size: 1.1rem;
       }
 
-      .floating-music {
-        width: 50px;
-        height: 50px;
-        bottom: 15px;
-        right: 15px;
+      .custom-audio-controls {
+        padding: 0.8rem;
+        gap: 0.6rem;
+      }
+
+      .custom-audio-controls button {
+        width: 38px;
+        height: 38px;
+        font-size: 1rem;
+      }
+
+      #progressBar {
+        height: 6px;
       }
 
       #autoPlayButton {
+        padding: 0.7rem 1.2rem;
         font-size: 0.9rem;
-        padding: 0.8rem 1.5rem;
         top: 10px;
-        left: 10px;
+      }
+
+      .floating-music {
+        width: 45px;
+        height: 45px;
+        bottom: 15px;
+        right: 15px;
       }
 
       .pantalla-rosgold .divisiones {
@@ -580,10 +572,15 @@
     }
 
     @media (max-width: 480px) {
+      .half-screen {
+        padding: 0.5rem 0;
+      }
+
       .divisiones {
         width: 85%;
         max-width: 350px;
         padding: 1.5rem;
+        margin: 1rem auto;
       }
 
       .pantalla-inicial .divisiones,
@@ -616,6 +613,37 @@
 
       .pantalla-inicial {
         padding-top: 320px;
+      }
+
+      .divisiones h1 {
+        font-size: 2em !important;
+      }
+
+      .divisiones h2 {
+        font-size: 1.6em;
+      }
+
+      p {
+        font-size: 0.9rem;
+      }
+
+      .countdown-item {
+        min-width: 60px;
+        padding: 0.6rem;
+      }
+
+      .countdown-number {
+        font-size: 1.3rem;
+      }
+
+      .location-button {
+        padding: 0.7rem 1.2rem;
+        font-size: 0.9rem;
+      }
+
+      .custom-audio-controls button {
+        width: 35px;
+        height: 35px;
       }
     }
 
@@ -1318,6 +1346,206 @@
 
     .regalo-item i {
       margin-right: 1rem;
+    }
+
+    /* Optimizaciones generales para móviles */
+    @media (max-width: 768px) {
+      /* Ajustes de texto */
+      .divisiones h1 {
+        font-size: 2.2em !important;
+        line-height: 1.3;
+        margin-bottom: 1rem;
+      }
+
+      .divisiones h2 {
+        font-size: 1.8em;
+        margin-bottom: 1.5rem;
+      }
+
+      p {
+        font-size: 0.95rem;
+        line-height: 1.6;
+        margin: 0.8rem 0;
+      }
+
+      /* Mejoras en el contador */
+      .countdown-elegant {
+        padding: 1.2rem;
+        margin: 1.5rem auto;
+        width: 95%;
+      }
+
+      .countdown-item {
+        padding: 0.8rem;
+        min-width: 65px;
+      }
+
+      .countdown-number {
+        font-size: 1.5rem;
+      }
+
+      /* Optimización de la mesa de regalos */
+      .mesa-regalos {
+        padding: 1.2rem;
+      }
+
+      .regalo-item {
+        padding: 0.8rem 1.2rem;
+        font-size: 0.9rem;
+        gap: 0.8rem;
+      }
+
+      .regalo-item i {
+        font-size: 1.2rem;
+      }
+
+      /* Mejoras en el timeline */
+      .timeline::before {
+        left: 30px;
+      }
+
+      .timeline-item {
+        padding-left: 60px;
+        padding-right: 15px;
+      }
+
+      .timeline-content {
+        padding: 1rem;
+      }
+
+      .timeline-content h3 {
+        font-size: 1.3rem;
+      }
+
+      /* Optimización del código de vestimenta */
+      .dress-code-item {
+        padding: 1.5rem;
+        margin: 0.8rem 0;
+      }
+
+      .dress-code-item h3 {
+        font-size: 1.4rem;
+        margin-bottom: 0.8rem;
+      }
+
+      .color-circle {
+        width: 30px;
+        height: 30px;
+      }
+
+      /* Mejoras en los botones */
+      .location-button {
+        padding: 0.8rem 1.5rem;
+        font-size: 0.95rem;
+        gap: 0.6rem;
+      }
+
+      .location-button i {
+        font-size: 1.1rem;
+      }
+
+      /* Optimización del reproductor de audio */
+      .custom-audio-controls {
+        padding: 0.8rem;
+        gap: 0.6rem;
+      }
+
+      .custom-audio-controls button {
+        width: 38px;
+        height: 38px;
+        font-size: 1rem;
+      }
+
+      #progressBar {
+        height: 6px;
+      }
+
+      /* Ajustes para los botones flotantes */
+      #autoPlayButton {
+        padding: 0.7rem 1.2rem;
+        font-size: 0.9rem;
+        top: 10px;
+      }
+
+      .floating-music {
+        width: 45px;
+        height: 45px;
+        bottom: 15px;
+        right: 15px;
+      }
+    }
+
+    /* Ajustes específicos para pantallas muy pequeñas */
+    @media (max-width: 360px) {
+      .divisiones h1 {
+        font-size: 2em !important;
+      }
+
+      .divisiones h2 {
+        font-size: 1.6em;
+      }
+
+      p {
+        font-size: 0.9rem;
+      }
+
+      .countdown-item {
+        min-width: 60px;
+        padding: 0.6rem;
+      }
+
+      .countdown-number {
+        font-size: 1.3rem;
+      }
+
+      .location-button {
+        padding: 0.7rem 1.2rem;
+        font-size: 0.9rem;
+      }
+
+      .custom-audio-controls button {
+        width: 35px;
+        height: 35px;
+      }
+    }
+
+    /* Mejoras en el rendimiento para móviles */
+    @media (max-width: 768px) {
+      .half-screen img {
+        will-change: transform;
+        transform: translateZ(0);
+      }
+
+      .divisiones {
+        will-change: transform;
+        transform: translateZ(0);
+      }
+
+      /* Optimización de animaciones */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* Mejoras en el scroll */
+      html {
+        scroll-padding-top: 60px;
+        -webkit-overflow-scrolling: touch;
+      }
+
+      /* Mejoras en la interactividad */
+      .location-button,
+      .custom-audio-controls button,
+      .regalo-item {
+        touch-action: manipulation;
+        -webkit-tap-highlight-color: transparent;
+      }
     }
   </style>
 </head>
