--- a/Informacion.html
+++ b/Informacion.html
@@ -1108,21 +1108,24 @@
 
     /* Estilos actualizados para el contador en su nueva ubicación */
     .countdown-elegant {
-      margin: 1.5rem 0;
+      width: 90%;
+      max-width: 380px;
+      margin: 2rem auto;
       padding: 1.5rem;
       background: linear-gradient(135deg, var(--rosa-intenso), var(--violeta));
       border-radius: 20px;
       color: white;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
       text-align: center;
-      animation: glow 3s infinite ease-in-out;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     }
 
     .countdown-container {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 1.2rem;
       flex-wrap: wrap;
+      margin: 0 auto;
     }
 
     .countdown-item {
@@ -1547,6 +1550,80 @@
         -webkit-tap-highlight-color: transparent;
       }
     }
+
+    /* Mejoras en el reproductor de audio */
+    .audio-wrapper {
+      width: 90%;
+      max-width: 350px;
+      margin: 2rem auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .custom-audio-controls {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 20px;
+      padding: 1.2rem;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+    }
+
+    #progressBar {
+      flex: 1;
+      max-width: 200px;
+      min-width: 100px;
+    }
+
+    @media (max-width: 768px) {
+      .countdown-elegant {
+        width: 85%;
+        max-width: 320px;
+        padding: 1.2rem;
+      }
+
+      .audio-wrapper {
+        width: 85%;
+        max-width: 300px;
+        margin: 1.5rem auto;
+      }
+
+      .custom-audio-controls {
+        padding: 1rem;
+        gap: 0.8rem;
+      }
+
+      #progressBar {
+        max-width: 150px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .countdown-elegant {
+        width: 90%;
+        max-width: 280px;
+        padding: 1rem;
+      }
+
+      .audio-wrapper {
+        width: 90%;
+        max-width: 260px;
+        margin: 1rem auto;
+      }
+
+      .custom-audio-controls {
+        padding: 0.8rem;
+        gap: 0.6rem;
+      }
+
+      #progressBar {
+        max-width: 120px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -1557,11 +1634,13 @@
     <div class="divisiones">
       <h1>Mis XV años</h1>
       <h1>Frida Rocha</h1>
-      <audio id="miAudio" src="lana del rey - salvatore (philipz flip).mp3"></audio>
-      <div class="custom-audio-controls">
-        <button id="playPauseBtn" title="Reproducir/Pausar">▶️</button>
-        <input type="range" id="progressBar" value="0" min="0" max="100" />
-        <button id="resetBtn" title="Reiniciar canción">🔁</button>
+      <div class="audio-wrapper">
+        <audio id="miAudio" src="lana del rey - salvatore (philipz flip).mp3"></audio>
+        <div class="custom-audio-controls">
+          <button id="playPauseBtn" title="Reproducir/Pausar">▶️</button>
+          <input type="range" id="progressBar" value="0" min="0" max="100" />
+          <button id="resetBtn" title="Reiniciar canción">🔁</button>
+        </div>
       </div>
     </div>
   </div>
