--- a/Informacion.html
+++ b/Informacion.html
@@ -37,6 +37,19 @@
       justify-content: center;
       overflow: hidden;
       padding: 2rem 0;
+      animation: gradientBG 15s ease infinite;
+    }
+
+    @keyframes gradientBG {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
     }
 
     /* Ajuste específico para la primera pantalla */
@@ -66,15 +79,16 @@
       background: rgba(255, 255, 255, 0.92);
       backdrop-filter: blur(12px);
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      animation: fadeIn 1.5s ease both;
       border: 1px solid rgba(255, 255, 255, 0.5);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      margin: 2rem auto;
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      margin: 3rem auto;
+      animation: floatIn 1.2s ease-out forwards;
     }
 
     .divisiones:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 40px rgba(0, 0, 0, 0.15);
+      transform: translateY(-8px);
+      box-shadow: 0 15px 45px rgba(0, 0, 0, 0.15);
+      background: rgba(255, 255, 255, 0.95);
     }
 
     .half-screen img {
@@ -88,6 +102,7 @@
       filter: brightness(0.85) contrast(1.1) blur(1px);
       z-index: 1;
       transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+      animation: zoomInOut 20s ease-in-out infinite;
     }
 
     .half-screen:hover img {
@@ -114,6 +129,8 @@
       background-clip: text;
       -webkit-text-fill-color: transparent;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      animation: shimmerText 3s infinite;
+      background-size: 200% auto;
     }
 
     .pantalla-inicial .divisiones h1:last-child {
@@ -146,14 +163,14 @@
     }
 
     .divisiones h1 {
-      margin: 0 0 1.5rem;
-      font-family: 'Great Vibes', cursive;
-      font-size: 3.5em;
+      position: relative;
+      overflow: hidden;
       background: linear-gradient(45deg, var(--rosa-intenso), var(--dorado));
       -webkit-background-clip: text;
       background-clip: text;
       -webkit-text-fill-color: transparent;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+      animation: shimmer 3s infinite;
+      background-size: 200% 100%;
     }
 
     .divisiones h1:last-child {
@@ -174,32 +191,27 @@
       letter-spacing: 0.5px;
     }
 
-    .audio-container {
-      width: 100%;
-      max-width: 350px;
-      margin: 2rem auto;
-      padding: 1.5rem;
-      background: linear-gradient(135deg, var(--rosa-intenso), var(--violeta));
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+    .audio-wrapper {
+      width: 85%;
+      max-width: 320px;
+      margin: 2.5rem auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     .custom-audio-controls {
+      width: 100%;
       display: flex;
       align-items: center;
-      gap: 1rem;
+      justify-content: center;
+      gap: 1.2rem;
       background: rgba(255, 255, 255, 0.95);
-      border-radius: 20px;
-      padding: 1rem;
+      border-radius: 25px;
+      padding: 1.4rem;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
-      width: 100%;
-      max-width: 400px;
-      margin: 1rem auto;
-      transition: transform 0.3s ease;
-    }
-
-    .custom-audio-controls:hover {
-      transform: scale(1.02);
+      animation: pulseGlow 3s infinite;
     }
 
     .custom-audio-controls button {
@@ -221,6 +233,7 @@
     .custom-audio-controls button:hover {
       transform: scale(1.1);
       box-shadow: 0 6px 12px var(--sombra);
+      background: linear-gradient(45deg, var(--rosa-intenso), var(--violeta));
     }
 
     #progressBar {
@@ -247,10 +260,12 @@
       border: 2px solid var(--rosa-intenso);
       cursor: pointer;
       transition: transform 0.2s ease;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     }
 
     #progressBar::-webkit-slider-thumb:hover {
       transform: scale(1.2);
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
     }
 
     .botones {
@@ -326,21 +341,41 @@
       color: var(--dorado) !important;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2) !important;
       -webkit-text-fill-color: var(--dorado) !important;
+      font-family: 'Great Vibes', cursive !important;
+      font-size: 2.8em !important;
     }
 
     .info-section {
       background: rgba(255, 255, 255, 0.95);
-      padding: 2rem;
-      border-radius: 20px;
+      padding: 2.5rem;
+      border-radius: 25px;
       margin: 2rem auto;
-      max-width: 600px;
+      max-width: 450px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      animation: floatIn 1s ease-out forwards, pulseGlow 3s infinite;
     }
 
     .info-section h2 {
+      font-family: 'Great Vibes', cursive;
       color: var(--rosa-intenso);
-      margin-bottom: 1.5rem;
-      font-size: 2rem;
+      margin-bottom: 1.8rem;
+      font-size: 2.5rem;
+      animation: shimmerText 3s infinite;
+      background: linear-gradient(45deg, var(--rosa-intenso), var(--dorado));
+      -webkit-background-clip: text;
+      background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-size: 200% auto;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+    }
+
+    @keyframes shimmerText {
+      0% {
+        background-position: -200% center;
+      }
+      100% {
+        background-position: 200% center;
+      }
     }
 
     .info-section p {
@@ -392,8 +427,8 @@
 
       .info-section {
         width: 100%;
-        padding: 1.2rem;
-        margin: 1rem 0;
+        padding: 2rem;
+        margin: 1.5rem auto;
       }
 
       .mesa-regalos {
@@ -442,9 +477,7 @@
       }
 
       .divisiones h1 {
-        font-size: 2.2em !important;
-        line-height: 1.3;
-        margin-bottom: 1rem;
+        font-size: 2.8em !important;
       }
 
       .divisiones h2 {
@@ -865,60 +898,7 @@
 
     /* Estilos para el timeline */
     .timeline {
-      max-width: 800px;
-      margin: 2rem auto;
-      position: relative;
-    }
-
-    .timeline::before {
-      content: '';
-      position: absolute;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 2px;
-      height: 100%;
-      background: linear-gradient(var(--rosa-intenso), var(--violeta));
-    }
-
-    .timeline-item {
-      margin: 2rem 0;
-      position: relative;
-      width: 50%;
-      padding: 0 2rem;
-    }
-
-    .timeline-item:nth-child(odd) {
-      left: 0;
-    }
-
-    .timeline-item:nth-child(even) {
-      left: 50%;
-    }
-
-    .timeline-content {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 1.5rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .timeline-content::before {
-      content: '';
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      background: var(--rosa-intenso);
-      border-radius: 50%;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .timeline-item:nth-child(odd) .timeline-content::before {
-      right: -10px;
-    }
-
-    .timeline-item:nth-child(even) .timeline-content::before {
-      left: -10px;
+      display: none;
     }
 
     /* Estilos para el botón de música flotante */
@@ -1020,7 +1000,8 @@
       flex-wrap: wrap;
       gap: 1.5rem;
       justify-content: center;
-      margin-top: 2rem;
+      margin-top: 2.5rem;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     .location-button {
@@ -1040,6 +1021,7 @@
       align-items: center;
       gap: 0.8rem;
       overflow: hidden;
+      animation: fadeInUp 0.8s ease-out;
     }
 
     .location-button::before {
@@ -1066,15 +1048,6 @@
       transform: translateY(-5px);
       box-shadow: 0 12px 25px rgba(0, 0, 0, 0.2);
       border-color: rgba(255, 255, 255, 0.5);
-    }
-
-    .location-button i {
-      font-size: 1.3rem;
-      transition: transform 0.3s ease;
-    }
-
-    .location-button:hover i {
-      transform: scale(1.2);
     }
 
     .location-button.maps {
@@ -1108,22 +1081,23 @@
 
     /* Estilos actualizados para el contador en su nueva ubicación */
     .countdown-elegant {
-      width: 90%;
-      max-width: 380px;
-      margin: 2rem auto;
-      padding: 1.5rem;
+      width: 85%;
+      max-width: 340px;
+      margin: 2.5rem auto;
+      padding: 1.8rem;
       background: linear-gradient(135deg, var(--rosa-intenso), var(--violeta));
-      border-radius: 20px;
+      border-radius: 25px;
       color: white;
       text-align: center;
       box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      animation: pulseGlow 3s infinite;
     }
 
     .countdown-container {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 1.2rem;
+      gap: 1.5rem;
       flex-wrap: wrap;
       margin: 0 auto;
     }
@@ -1355,9 +1329,7 @@
     @media (max-width: 768px) {
       /* Ajustes de texto */
       .divisiones h1 {
-        font-size: 2.2em !important;
-        line-height: 1.3;
-        margin-bottom: 1rem;
+        font-size: 2.8em !important;
       }
 
       .divisiones h2 {
@@ -1624,6 +1596,112 @@
         max-width: 120px;
       }
     }
+
+    /* Animaciones mejoradas */
+    @keyframes floatIn {
+      0% {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes shimmer {
+      0% {
+        background-position: -100% 0;
+      }
+      100% {
+        background-position: 100% 0;
+      }
+    }
+
+    @keyframes pulseGlow {
+      0%, 100% {
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+      }
+      50% {
+        box-shadow: 0 8px 32px rgba(210, 106, 138, 0.3);
+      }
+    }
+
+    /* Animación para botones */
+    .location-button {
+      animation: fadeInUp 0.8s ease-out;
+    }
+
+    .location-button:hover {
+      transform: translateY(-5px) scale(1.02);
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Ajustes responsive mejorados */
+    @media (max-width: 768px) {
+      .divisiones {
+        width: 92%;
+        padding: 2.5rem;
+        margin: 2rem auto;
+      }
+
+      .audio-wrapper {
+        width: 90%;
+        max-width: 300px;
+        margin: 2rem auto;
+      }
+
+      .countdown-elegant {
+        width: 90%;
+        max-width: 300px;
+        padding: 1.5rem;
+      }
+
+      .custom-audio-controls {
+        padding: 1.2rem;
+        gap: 1rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .divisiones {
+        width: 94%;
+        padding: 2rem;
+        margin: 1.5rem auto;
+      }
+
+      .audio-wrapper {
+        width: 92%;
+        max-width: 280px;
+        margin: 1.5rem auto;
+      }
+
+      .countdown-elegant {
+        width: 92%;
+        max-width: 280px;
+        padding: 1.2rem;
+      }
+
+      .custom-audio-controls {
+        padding: 1rem;
+        gap: 0.8rem;
+      }
+    }
+
+    /* Eliminar la sección del timeline */
+    .timeline {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -1678,40 +1756,6 @@
             <i class="fas fa-clipboard-check"></i>
             Confirmar Asistencia
           </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Nueva sección de Timeline -->
-  <div class="half-screen">
-    <div class="divisiones" style="max-width: 800px;">
-      <h1 style="font-size: 3em;">Programa del Día</h1>
-      
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3>17:00</h3>
-            <p>Misa de Acción de Gracias</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3>18:30</h3>
-            <p>Recepción de Invitados</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3>19:00</h3>
-            <p>Cena</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-content">
-            <h3>20:00</h3>
-            <p>Vals y Baile</p>
-          </div>
         </div>
       </div>
     </div>
