--- a/Informacion.html
+++ b/Informacion.html
@@ -61,12 +61,33 @@
 
     .section-hidden {
       opacity: 0;
-      transform: translateY(60px);
+      transform: translateY(8rem);
+      transition: all 1s;
     }
 
     .section-visible {
       opacity: 1;
       transform: translateY(0);
+    }
+
+    .fade-in {
+      animation: fadeIn 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-up {
+      animation: slideUp 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-in-left {
+      animation: slideInLeft 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-in-right {
+      animation: slideInRight 1s ease-out forwards;
+      opacity: 0;
     }
 
     .divisiones {
@@ -86,7 +107,7 @@
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
       border: 1px solid rgba(255, 255, 255, 0.5);
       transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-      animation: floatIn 1.2s ease-out forwards;
+      animation: slideUp 1s ease-out forwards;
     }
 
     .divisiones:hover {
@@ -201,6 +222,7 @@
       margin: 2rem auto;
       display: flex;
       justify-content: center;
+      animation: slideUp 1s ease-out 0.3s forwards;
     }
 
     .custom-audio-controls {
@@ -358,7 +380,7 @@
       background: rgba(255, 255, 255, 0.95);
       border-radius: 25px;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-      animation: floatIn 1s ease-out forwards, pulseGlow 3s infinite;
+      animation: fadeIn 1s ease-out 0.3s forwards;
     }
 
     .info-section h2 {
@@ -387,11 +409,6 @@
     .info-section p {
       margin: 1rem 0;
       line-height: 1.8;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(40px); }
-      100% { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes pulse {
@@ -1908,6 +1925,126 @@
         font-size: 0.95rem;
       }
     }
+
+    /* Animaciones al deslizar y efectos mejorados */
+    .section-hidden {
+      opacity: 0;
+      transform: translateY(8rem);
+      transition: all 1s;
+    }
+
+    .section-visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .fade-in {
+      animation: fadeIn 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-up {
+      animation: slideUp 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-in-left {
+      animation: slideInLeft 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    .slide-in-right {
+      animation: slideInRight 1s ease-out forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
+    @keyframes slideUp {
+      0% {
+        opacity: 0;
+        transform: translateY(4rem);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideInLeft {
+      0% {
+        opacity: 0;
+        transform: translateX(-4rem);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    @keyframes slideInRight {
+      0% {
+        opacity: 0;
+        transform: translateX(4rem);
+      }
+      100% {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    /* Aplicar animaciones a elementos específicos */
+    .divisiones {
+      opacity: 0;
+      animation: slideUp 1s ease-out forwards;
+    }
+
+    .info-section {
+      opacity: 0;
+      animation: fadeIn 1s ease-out 0.3s forwards;
+    }
+
+    .countdown-elegant {
+      opacity: 0;
+      animation: slideInLeft 1s ease-out 0.5s forwards;
+    }
+
+    .location-buttons {
+      opacity: 0;
+      animation: slideInRight 1s ease-out 0.7s forwards;
+    }
+
+    .audio-wrapper {
+      opacity: 0;
+      animation: slideUp 1s ease-out 0.3s forwards;
+    }
+
+    /* Animación suave al hacer scroll */
+    html {
+      scroll-behavior: smooth;
+    }
+
+    /* Optimizaciones para móviles */
+    @media (prefers-reduced-motion: reduce) {
+      .section-hidden,
+      .section-visible,
+      .fade-in,
+      .slide-up,
+      .slide-in-left,
+      .slide-in-right {
+        animation: none;
+        opacity: 1;
+        transform: none;
+        transition: none;
+      }
+    }
   </style>
 </head>
 <body>
@@ -2190,6 +2327,32 @@
 
       actualizarContadorElegante(dias, horas, minutos);
     }
+  </script>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('section-visible');
+          }
+        });
+      }, {
+        threshold: 0.15
+      });
+
+      document.querySelectorAll('.half-screen').forEach((section) => {
+        section.classList.add('section-hidden');
+        observer.observe(section);
+      });
+
+      // Animación para elementos dentro de las secciones
+      const elementsToAnimate = document.querySelectorAll('.divisiones, .info-section, .countdown-elegant, .location-buttons, .audio-wrapper');
+      elementsToAnimate.forEach((element) => {
+        element.style.opacity = '0';
+        observer.observe(element);
+      });
+    });
   </script>
 </body>
 </html>
