--- a/Informacion.html
+++ b/Informacion.html
@@ -284,7 +284,7 @@ h1,h2,p {
   <img src="2.jpg" alt="Fondo Mesa de Regalos" class="img-portrait" />
   <div class="divisiones">
     <h1>Mesa de Regalos</h1>
-    <p>Tu presencia es mi mejor regalo. Si deseas obsequiar algo adicional:</p>
+    <p>Tu presencia es mi mejor regalo, pero si deseas obsequiarme algo más, agradezco tu detalle en efectivo o transferencia a la siguiente cuenta:</p>
     <p><strong>Banco:</strong> Banregio<br><strong>Titular:</strong> Frida Rocha<br><strong>Cuenta:</strong> 058597000053918934</p>
     <a href="#" class="custom-button copy-button" id="copyBtn"><i class="fas fa-copy"></i> Copiar número</a>
   </div>
@@ -345,3 +345,4 @@ actualizarContador();
 
 </body>
 </html>
+
